- Simple fix for the background to not be cut off on iphone -- apparently a known iOS 7+ issue to do with fixed backgrounds.. - Also adjusted some spacing around text

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,9 +32,8 @@ body {
  color: #6c6d70;
 }
 
-html {
+body {
  background: url("../bg-grey.jpg");
- background-attachment: fixed;
  background-size: cover;
 }
 
@@ -65,8 +64,10 @@ a:hover {
 
 .headline {
  font-size: 1.5rem;
+ margin-top: 2em;
  margin-bottom: 0;
 }
+p { margin-bottom: 6%;}
 .offices {
  padding-top: 4%;
  text-align: center;
@@ -77,7 +78,7 @@ address {
  text-align: left;
  font-style: normal;
  font-weight: normal;
- margin-bottom: 2em;
+ margin-bottom: 3em;
  width: 50%;
  min-width: 15em;
  max-width: 22em;
@@ -88,7 +89,7 @@ address a:hover {
 
 .socialmedia {
  text-align: center;
- margin: 4% 1em;
+ margin: 2% 1em 4%;
 }
 .socialmedia a {
  margin: 0 1em;
